[tool.poetry]
name = "etl-base"
version = "0.1.0"
description = "etl example by coroutines"
authors = ["sergey_klimov <s.klimov@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.9.5"
django = "^4.1.5"
django-celery-beat = "^2.4.0"
django-celery-results = "^2.4.0"
redis = "^4.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
