[tool.poetry]
name = "etl-base"
version = "0.1.0"
description = "etl example by coroutines"
authors = ["sergey_klimov <s.klimov@bk.ru>"]
readme = "README.md"
packages = [{include = "etl_base"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.7.1"
asyncpg = "^0.28.0"
asyncpg-stubs = "^0.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_incomplete_defs = true
